small language spacing fix and adding mindeful_BG to login page
small language spacing fix and adding mindeful_BG to login page.  And changed the image at Become a co2ok ninja part at the homepage

--- a/co2ok_dojo/co2ok_dojo/static/css/ninja-register.css
+++ b/co2ok_dojo/co2ok_dojo/static/css/ninja-register.css
@@ -1,6 +1,9 @@
 .header-register {
     background-image: url(../images/ninjaDesign_install_BG.svg);
 }
+.header-login {
+  background-image: url(../images/ninjaDesign_mindful_BG.svg);
+}
 .register-container-padder{
     padding-top: 100px;
     padding-bottom: 340px;
